--- a/StopOver2/Packages/manifest.json
+++ b/StopOver2/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.guciodevs.simple-min-max-slider": "https://github.com/GucioDevs/SimpleMinMaxSlider.git#upm",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.6.10",
     "com.unity.collab-proxy": "1.9.0",
