--- a/StopOver2/ProjectSettings/Packages/com.unity.polybrush/Settings.json
+++ b/StopOver2/ProjectSettings/Packages/com.unity.polybrush/Settings.json
@@ -61,7 +61,7 @@
             {
                 "type": "UnityEditor.Polybrush.PrefabLoadout, Unity.Polybrush.Editor, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ScatteringEditor.userLoadout",
-                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"3754cac8e0437f148a759953e4c12b4f\",\"type\":2},\"prefab\":{\"fileID\":8979272754488225753,\"guid\":\"97b439228ba444f41a57f2e725c27a28\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"3754cac8e0437f148a759953e4c12b4f\",\"type\":2},\"prefab\":{\"fileID\":8979272754488225753,\"guid\":\"8738e17416bb97b4fbdf4b936aff93fe\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"3754cac8e0437f148a759953e4c12b4f\",\"type\":2},\"prefab\":{\"fileID\":8979272754488225753,\"guid\":\"813e9464fc313c1448fc673a2c97b076\",\"type\":3}},{\"palette\":{\"fileID\":11400000,\"guid\":\"3754cac8e0437f148a759953e4c12b4f\",\"type\":2},\"prefab\":{\"fileID\":8979272754488225753,\"guid\":\"6b928a70608d6c542ab5e0dd3ad98bec\",\"type\":3}}]}}"
+                "value": "{\"m_Value\":{\"infos\":[{\"palette\":{\"fileID\":11400000,\"guid\":\"3754cac8e0437f148a759953e4c12b4f\",\"type\":2},\"prefab\":{\"fileID\":8979272754488225753,\"guid\":\"813e9464fc313c1448fc673a2c97b076\",\"type\":3}}]}}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
